# world-cup-bet

./: .gitignore  README.md  SETUP.md  vercel.json
.devcontainer/: devcontainer.json
backend/: main.py  pyproject.toml
clawbot/: Dockerfile  README.md  botfather-commands.txt  config.json.template  docker-compose.yml  setup.sh
clawbot/skills/: clawbot_persona.md  curriculum.md  quiz.md
clawbot/skills/clawbot-quiz/: SKILL.md
clawbot/skills/clawbot-tutor/: SKILL.md
clawbot/workspace/: curriculum.json
frontend/: index.html
frontend-react/: package-lock.json
frontend-react/src/: App.js
